<resources>
    <string name="app_name">Cash Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TITLE">CASH REGISTER</string>

    <string name="ADD">Add</string>
    <string name="SCAN">Scan</string>

    <string name="QRINFO">Item QR</string>

    <string name="DELETE_ITEM">Delete</string>
    <string name="UPDATE_ITEM">Update</string>
    <string name="EXPORT_ITEM">Export</string>

    <string name="LOGIN">SIGN IN</string>
    <string name="EMAIL">E-MAIL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="REPEATPASSWORD">REPEAT PASSWORD</string>
    <string name="info">Don\'t have account\?</string>
    <string name="signup"><u>Sign up\.</u></string>
    <string name="EXIT">EXIT</string>
    <string name="CreateBtn">CREATE USER</string>

    <string name="signIn">Sign in</string>

    <string name="already">Already have account\?</string>

    <string name="Create">Create user\.</string>

    <string name="BACK">Back</string>

    <string name="REGISTER_COMPANY">Register your company</string>
    <string name="COMPANY_NAME">Company name</string>
    <string name="COMPANY_ADRESS">Company adress</string>
    <string name="COMPANY_CITY_POSTAL_CODE">Company city and Postal Code</string>
    <string name="COMPANY_CONTACT_NUMBER">Contact Number</string>
    <string name="CEO">Company CEO name</string>
    <string name="COMPANY_EMAIL">Company E\-mail address</string>

    <string name="SAVE">SAVE</string>

    <string name="CASH_REGISTER">CASH REGISTER</string>
    <string name="STOCK">ADD TO STOCK</string>
    <string name="COMPANY_INFO">COMPANY INFO</string>
    <string name="view_stock">VIEW STOCK</string>

    <string name="exportQR">EXPORT ITEM QR</string>

    <string name="ABOUT_APPLICATION">ABOUT CASH REGISTER</string>

    <string name="logout">LOG OUT</string>

    <string name="productAndSrevicae">ADD PRODUCT OR SERVICE</string>

    <string name="ProductOrServiceName">Product or Service Name</string>

    <string name="maxInput70">Max input is 70 chars</string>
    <string name="maxInput5">Max input is 5 chars</string>

    <string name="unitMeasure">Unit Measure</string>

    <string name="Choice">Choose product or service</string>
    <string name="choose">Choose</string>

    <string name="productQuantity">Product Quantity</string>

    <string name="price">Price</string>

    <string name="numeric">Numeric value only</string>

    <string name="decimal">Decimal value only</string>

    <string name="reset">RESET</string>

    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="export">EXPORT</string>

    <string name="cancel">CANCEL</string>

    <string name="proceed">PROCEED</string>

    <string name="VIEW_STOCK_ITEMS">VIEW STOCK</string>

    <string name="productid">ID</string>
    <string name="productname">Name</string>
    <string name="productquantity">Qt</string>
    <string name="productprice">PPO</string>
    <string name="producttotalprice">Tota P</string>

    <string name="addmore">Add more</string>
    <string name="eliminate">Eliminate</string>
    <string name="removeitem">Remove</string>

    <string name="cashreg">Invoice</string>
    <string name="addtostock">Add to stock</string>
    <string name="viewstock">View stock</string>
    <string name="exportinvoice">View receipts</string>
    <string name="companyinfo">Company Information</string>
    <string name="abouttheapp">About application</string>

    <string name="open">OPEN</string>

    <string name="VIEW_RECEIPTS">VIEW RECEIPTS</string>

    <string name="about_cash_register_app">About Cash Register</string>

    <string name="about_Text">Cash Register application is student project for subject RMA.
        It covers the following functionalities: user register, user log-in, stock tracking,
        editing stock supplies, invoicing, scanning products into cart by QR,
        viewing issued invoices</string>
</resources>