<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/frameMainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".fragments.cashRegisterFragments.MainMenu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:background="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnCashRegister"
                style="@style/mainMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:background="@color/mainMenuButtons"
                android:padding="@dimen/mainMenuButtonPadding10dp"
                android:text="@string/CASH_REGISTER"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo"
                app:layout_constraintVertical_bias="0.17000002" />


            <Button
                android:id="@+id/btnStock"
                style="@style/mainMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:background="@color/mainMenuButtons"
                android:padding="@dimen/mainMenuButtonPadding10dp"
                android:text="@string/STOCK"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCashRegister"
                app:layout_constraintVertical_bias="0.120000005" />

            <Button
                android:id="@+id/btnCompanyInformation"
                style="@style/mainMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:background="@color/mainMenuButtons"
                android:padding="@dimen/mainMenuButtonPadding10dp"
                android:text="@string/COMPANY_INFO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnStock"
                app:layout_constraintVertical_bias="0.16000003" />

            <Button
                android:id="@+id/btnAboutCashRegister"
                style="@style/mainMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:background="@color/mainMenuButtons"
                android:padding="@dimen/mainMenuButtonPadding10dp"
                android:text="@string/ABOUT_APPLICATION"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnStock"
                app:layout_constraintVertical_bias="0.49" />

            <Button
                android:id="@+id/btnExit"
                style="@style/exit"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@color/RED"
                android:text="@string/EXIT"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAboutCashRegister" />

            <Button
                android:background="@color/RED"
                android:id="@+id/btnLogOut"
                style="@style/exit"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAboutCashRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>